fixed spacing on my %'s

--- a/css/main.css
+++ b/css/main.css
@@ -82,13 +82,13 @@ div {
   height: 100px;
   top: calc(50% - 50px);
   width: 100px;
-
   background-color: orange;
   border-radius: 50%;
+  animation: all 2s ease;
 }
 
 .bounce {
-  
+  animation: bounce 2s ease;
 }
 
 .list {
@@ -109,6 +109,7 @@ div {
   overflow: hidden;
   padding: 0 0.5em;
   max-height: 0;
+  animation: expand .5s ease forwards;
 
   background-color: plum;
   border: 1px solid mediumpurple;
@@ -117,6 +118,40 @@ div {
   color: mediumpurple;
 }
 
-@keyframes do-stuff {
-  ⋮
+@keyframes bounce {
+
+  0% {
+    transform: translate(0, 0);
+}
+  20% {
+    transform: translate(-45px, -20px);
+}
+
+  40% {
+    transform: translate(-70px, 20px);
+  }
+
+  60% {
+    transform: translate(-95px, -10px);
+  }
+
+  80% {
+    transform: translate(-120px, 10px);
+  }
+
+  100% {
+    transform: translate(-145px, -5px);
+  }
+
+}
+
+@keyframes expand {
+
+  0% {
+    max-height: 0;
+  }
+
+  100% {
+    max-height: 1.5rem;
+  }
 }
